--- a/qtcadmin/qtcadmin-view/index.html
+++ b/qtcadmin/qtcadmin-view/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="renderer" content="webkit" />
+    <link rel="shortcut icon" href="static/favicon.ico">
     <title>琴台学院培训管理系统</title>
   </head>
   <body>
