--- a/qtcadmin/qtcadmin-view/index.html
+++ b/qtcadmin/qtcadmin-view/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="renderer" content="webkit" />
-    <link rel="shortcut icon" href="static/favicon.ico">
-    <title>琴台学院培训管理系统</title>
+    <link rel="shortcut icon" href="./static/favicon.ico">
+    <title>鐞村彴瀛﹂櫌鍩硅绠＄悊绯荤粺</title>
   </head>
   <body>
     <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
